# litedoc

./: .gitignore  README.md  pyproject.toml  test_mkdoc.bat
.github/workflows/: pypi-publish.yml
docs/api/: __main__.md  i18n.md  index.md  output.md  version.md
docs/api/docstring/: docstring.md  index.md  parser.md
docs/api/style/: index.md  markdown.md
docs/api/syntax/: astparser.md  node.md
litedoc/: __main__.py  i18n.py  output.py  utils.py  version.py
litedoc/docstring/: docstring.py  parser.py
litedoc/style/: markdown.py
litedoc/syntax/: astparser.py  node.py
tests/: test_makedoc.py  test_parser.py
tests/test_modules/: tree.py
tests/test_modules/mbcp/: __init__.py
tests/test_modules/mbcp/mp_math/: __init__.py  angle.py  const.py  equation.py  line.py  mp_math_typing.py  plane.py  point.py  segment.py  utils.py  vector.py
tests/test_modules/mbcp/particle/: __init__.py
tests/test_modules/mbcp/presets/: __init__.py
tests/test_modules/mbcp/presets/model/: __init__.py
